增加即刻的头像拖拽效果

--- a/video-pip/index.html
+++ b/video-pip/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>drag</title>
+  <title>video-pip</title>
   <link href="https://cdn.bootcss.com/highlight.js/9.13.1/styles/github-gist.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
 </head>
