--- a/autocomplete/index.html
+++ b/autocomplete/index.html
@@ -5,20 +5,72 @@
   <title>after-image</title>
   <link href="https://cdn.bootcss.com/highlight.js/9.13.1/styles/github-gist.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="../common.css">
 </head>
 <body>
-   <input id="input-box" type="text">
-   <ul id="sug-list">
-   </ul>
+  <div class="input-container">
+     <input id="input-box" type="text">
+     <ul id="sug-list">
+     </ul>
+  </div>
 
   <div class="code_show">
     <pre><code class="javascript">
-    </code></pre>
+const { fromEvent } = rxjs
+const { switchMap, debounceTime, map, filter } = rxjs.operators
+
+const inputDom = document.querySelector('#input-box')
+const list = document.querySelector('#sug-list')
+const input$ = fromEvent(inputDom, 'input')
+const select$ = fromEvent(list, 'click')
+
+// 获取补全建议
+function getSuggestionList (word) {
+  const url = `https://zh.wikipedia.org/w/api.php?action=opensearch&format=json&limit=5&origin=*&search=${word}`
+  return fetch(url, {mode: 'cors', method: 'GET'}).then(res => res.json())
+}
+
+// 生成补全建议列表
+function parseResultToList (arr = []) {
+  list.innerHTML = ''
+
+  const fragment = document.createDocumentFragment()
+  for (let item of arr) {
+    const li = document.createElement('li')
+    li.innerHTML = item
+    fragment.appendChild(li)
+  }
+
+  list.appendChild(fragment)
+}
+
+// 输入
+input$.pipe(
+  debounceTime(400),
+  switchMap(e => {
+    return getSuggestionList(e.target.value)
+  },
+  (val, res) => res[1])
+).subscribe(
+  arr => parseResultToList(arr)
+)
+
+// 点击选择建议项
+select$.pipe(
+  filter(e => e.target.matches('li')),
+  map(e => e.target.innerText)
+).subscribe(
+  val => {
+    inputDom.value = val
+    parseResultToList([])
+  }
+)
     </code></pre>
   </div>
   <script src="https://cdn.bootcss.com/highlight.js/9.13.1/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="https://cdn.bootcss.com/rxjs/6.1.0/rxjs.umd.min.js"></script>
+  <script src="./getSuggestionList.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
