增加live_server 配置和秘籍demo

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 <body>
   <ul>
     <li>
-      <a href="./drag/">20行代码实现图片拖拽</a>
+      <a href="./src/drag/">20行代码实现图片拖拽</a>
     </li>
     <li>
-      <a href="./video-pip/">B站的视频画中画功能</a>
+      <a href="./src/video-pip/">B站的视频画中画功能</a>
     </li>
     <li>
-      <a href="./after-image">即刻头像拖拽残影效果</a>
+      <a href="./src/after-image">即刻头像拖拽残影效果</a>
     </li>
     <li>
-      <a href="./autocomplete/">自动补全</a>
+      <a href="./src/autocomplete/">自动补全</a>
+    </li>
+    <li>
+      <a href="./src/cheats/">魂斗罗秘籍</a>
     </li>
   </ul>
 </body>
