--- a/src/after-image/index.html
+++ b/src/after-image/index.html
@@ -5,7 +5,7 @@
   <title>after-image</title>
   <link href="https://cdn.bootcss.com/highlight.js/9.13.1/styles/github-gist.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="../../common.css">
 </head>
 <body>
   <img draggable="false" src="http://n.sinaimg.cn/sinacn00/200/w1080h720/20180927/18c2-hiixpuq0041291.jpg">
