--- a/src/autocomplete/index.html
+++ b/src/autocomplete/index.html
@@ -5,7 +5,7 @@
   <title>after-image</title>
   <link href="https://cdn.bootcss.com/highlight.js/9.13.1/styles/github-gist.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="../../common.css">
 </head>
 <body>
   <div class="input-container">
@@ -70,7 +70,6 @@ select$.pipe(
   <script src="https://cdn.bootcss.com/highlight.js/9.13.1/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <script src="https://cdn.bootcss.com/rxjs/6.1.0/rxjs.umd.min.js"></script>
-  <script src="./getSuggestionList.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
