--- a/src/drag/index.html
+++ b/src/drag/index.html
@@ -5,7 +5,7 @@
   <title>drag</title>
   <link href="https://cdn.bootcss.com/highlight.js/9.13.1/styles/github-gist.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./index.css">
-  <link rel="stylesheet" href="../common.css">
+  <link rel="stylesheet" href="../../common.css">
 </head>
 <body>
   <div id="drag">
